<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="597dp"
    android:layout_height="374dp"
    android:layout_gravity="center"
    android:background="@drawable/alert_net_bg" >

    <LinearLayout
        android:id="@+id/alert_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/alert_title_net"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:alpha="0.2"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="100dp"
            android:paddingRight="100dp" >

            <ImageView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/network1" />

            <ImageView
                android:layout_marginLeft="155dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/network2" />
        </LinearLayout>

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:paddingTop="20dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/alert_msg_net"
            android:textColor="#80ffffff"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:alpha="0.2"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/alert_bt_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/net_left_selector"
                android:text="@string/alert_dialog_ok_net"
                android:textColor="@color/textBlue"
                android:textSize="26sp" />

            <Button
                android:id="@+id/alert_bt_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/net_right_selector"
                android:text="@string/alert_dialog_cancel_net"
                android:textColor="@color/textBlue"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>