<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.weather.SearchActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="19dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal" >

            <com.test.carweather.view.MySearchView
                android:id="@+id/search_box"
                android:layout_width="840dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_bt_cancel"
                android:text="@string/search_cancel"
                android:textColor="@color/blue"
                android:textSize="26sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/search_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="150dp"
            android:text="@string/search_hint_searching"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/search_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/search_result_title"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/search_result_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_search_result"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lv_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@drawable/item_selector"
            android:paddingLeft="56dp"
            android:paddingRight="56dp" />
    </LinearLayout>

    <!--
         <include
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/tablebar" />
    -->

</RelativeLayout>
