<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basic_panel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_panel"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="40dp"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/prompt_alarm"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/weather_warn_yellow"
            android:text="@string/alert_weather"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tempter_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/state_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/weather_index_air"
                    android:gravity="center_vertical"
                    android:text="@string/index_air"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/air_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/weather_index_ultraviolet"
                    android:gravity="center_vertical"
                    android:text="@string/index_ultravioletray"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/ultravioletray_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/weather_index_wash"
                    android:gravity="center_vertical"
                    android:text="@string/index_washcar"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/washcar_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/index_umbrella"
                    android:gravity="center_vertical"
                    android:text="@string/index_umbrella"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/umbrella_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:scrollbars="none" >
    </GridView>

</LinearLayout>